Changed the links in the index page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
   <table cellspacing="20">
-    <td><img src="H:\WEB_DEV_BOOTCAMP\HTML\Personal Site\Assets\Images\circle-cropped.png" alt="Avatar"></td>
+    <td><img src="Personal Site\Assets\Images\circle-cropped.png" alt="Avatar"></td>
     <td><h1>Saurabh Thakur</h1>
     <p><em>Engineer,<strong> Pune University</strong></em></p>
-    <p><a href="H:\WEB_DEV_BOOTCAMP\HTML\Personal Site\Contact.html">Contact Me</a></p><br></td>
+    <p><a href="Personal Site\Contact.html">Contact Me</a></p><br></td>
   </table>
   <hr>
   <h2>About Me</h2>
